# WeilanEngine-GL

./: .gitignore  CMakeLists.txt  EngineManager.cpp  EngineManager.hpp  Input.cpp  Input.hpp  LICENSE  Log.md  Log.txt  Physics.cpp  Physics.hpp  README.md  Settings.cpp  Settings.hpp  Time.cpp  Time.hpp  UserInterface.cpp  UserInterface.hpp  demo-setup.py  wlEngine.hpp
Component/: Animation.cpp  Animation.hpp  Audio.cpp  Audio.hpp  Camera.cpp  Camera.hpp  Camera2D.cpp  Camera2D.hpp  Camera3D.cpp  Camera3D.hpp  Component.cpp  Component.hpp  LuaScript.cpp  Model.cpp  (+23 more)
Engine/: CMakeLists.txt
Engine/Extra/Material/Shader/: Text.frag
Engine/Header/: CMakeLists.txt
Engine/Header/Private/: CMakeLists.txt
Engine/Header/Private/Component/: CMakeLists.txt  FixedArrayAllocator.hpp
Engine/Header/Private/GameEditor/: CMakeLists.txt  GameEditor.hpp  SceneData.hpp
Engine/Header/Private/Manager/: CMakeLists.txt  ResourceManager.hpp
Engine/Header/Private/System/: CMakeLists.txt  LuaScriptSystem.hpp  NpcSystem.hpp  RenderSystem.hpp  StateMachineSystem.hpp
Engine/Header/Private/Utility/: CMakeLists.txt
Engine/Header/Public/Component/: Animation.hpp  CMakeLists.txt  Camera.hpp  Camera2D.hpp  Component.hpp  NpcController.hpp  RenderContext.hpp  RenderScript.hpp  Script.hpp  Sprite.hpp  TRigidbody.hpp  Text.hpp  Transform.hpp  VolumetricLight.hpp
Engine/Header/Public/GameObject/: CMakeLists.txt  Entity.hpp  Scene.hpp
Engine/Header/Public/Global/: CMakeLists.txt  Input.hpp  Settings.hpp  wlEngine.hpp
Engine/Header/Public/Graphics/: CMakeLists.txt  Character.hpp  DebugDraw3D.hpp  GlobalShaderParameter.hpp  Mesh.hpp  Mesh2D.hpp  RenderGroup.hpp  Shader.hpp  Texture.hpp
Engine/Header/Public/Manager/: CMakeLists.txt  EngineManager.hpp
Engine/Source/Component/: Animation.cpp  Audio.cpp  CMakeLists.txt  Camera.cpp  Camera2D.cpp  Camera3D.cpp  Clip.hpp  Component.cpp  LuaScript.cpp  Model.cpp  NpcController.cpp  RenderContext.cpp  RenderScript.cpp  Script.cpp  Sprite.cpp  StateMachine.cpp  TRigidbody.cpp  Text.cpp  Transform.cpp  VolumetricLight.cpp
Engine/Source/GameEditor/: CMakeLists.txt  GameEditor.cpp  SceneData.cpp
Engine/Source/GameObject/: CMakeLists.txt  Entity.cpp  Scene.cpp
Engine/Source/Global/: CMakeLists.txt  Input.cpp  Settings.cpp  Time.cpp  UserInterface.cpp
Engine/Source/Graphics/: CMakeLists.txt  Character.cpp  DebugDraw3D.cpp  GlobalShaderParameter.cpp  Material.cpp  Mesh.cpp  Mesh2D.cpp  Model.cpp  RenderGroup.cpp  Shader.cpp  ShaderParameter.cpp  Texture.cpp
Engine/Source/Manager/: CMakeLists.txt  EngineManager.cpp  ResourceManager.cpp
Engine/Source/System/: AnimationSystem.cpp  AudioSystem.cpp  CMakeLists.txt  InputSystem.cpp  LuaScriptSystem.cpp  NpcSystem.cpp  PhysicsSystem.cpp  RenderSystem.cpp  ScriptSystem.cpp  StateMachineSystem.cpp  System.cpp
Engine/Source/Utility/: CMakeLists.txt  Utility.cpp
Test/: CMakeLists.txt  TestMain.cpp
Test/GameTest/: CMakeLists.txt  GameTest.cpp
Test/Graphics/: CMakeLists.txt  MaterialTest.cpp
Test/Resource/: CMakeLists.txt
Test/Resource/Script/: CMakeLists.txt  Scripts.hpp
Test/gtest/googletest/src/: gtest.cc
UnitTest/: CMakeLists.txt  UnitTest.cpp
UnitTest/Graphics/: MaterialTest.cpp
etc/demo/: CMakeLists.txt  main.cpp  mainScene.json
etc/demo/LuaScript/: test.lua
etc/demo/NpcData/: NpcJsonData.json
etc/demo/Script/: BuildingScript.cpp  BuildingScript.hpp  ContactFilterDefine.hpp  EnviornmentObject.cpp  EnviornmentObject.hpp  ICollectable.hpp  Item.hpp  NpcScript.cpp  NpcScript.hpp  OpenGLTest.cpp  OpenGLTest.hpp  OtherScript.hpp  StoneScript.hpp
etc/demo/Script/AiScript/: Move.cpp  Move.hpp  Scheduler.cpp  Scheduler.hpp
etc/demo/Script/Monster/: BasicEnemy.cpp  BasicEnemy.hpp
etc/demo/Script/Player/: PlayerController.cpp  PlayerController.hpp  PlayerSkillManager.cpp  PlayerSkillManager.hpp
etc/demo/Shader/: Tess.frag  Tess.tesc  Tess.tese  Tess.vert  green.frag  green.vert  lamp_texture.frag  lamp_texture.vert  model_loading.frag  model_loading.vert  objectShader.frag  outline.frag  outline.vert  stone_shader.frag  stone_shader.vert
etc/demo/Shader/Sphere/: Sphere.frag  Sphere.tesc  Sphere.tese  Sphere.vert
etc/demo/System/: MonsterSystem.cpp  MonsterSystem.hpp
etc/demo/resource/: Sprite-0001-Recovered.aseprite  Sprite-0001.aseprite  Sprite-0002.aseprite  Sprite-0003-Recovered.aseprite  Sprite-0003.aseprite  Tasta_idle.json  art collection.aseprite  slime.ase  tasta.aseprite  tasta.json
etc/demo/resource/Modular Collection/Modular Terrain Beach/: Prop_Shell_1.mtl  Prop_Shell_2.mtl  Prop_Starfish_1.mtl  Prop_Treasure_Chest.mtl  Prop_Tree_Palm_1.mtl  Sand_Side.mtl
etc/demo/resource/Modular Collection/Modular Terrain Cliff/: Cliff_Base_Waterfall.mtl  Path_Steps_Grass_Edge_Top.mtl  Prop_Bridge_Rope_End.mtl  Prop_Bridge_Rope_Middle.mtl  Prop_Bridge_Rope_Rope_Support.mtl  Prop_Cliff_Rock_2.mtl  Waterfall_Top.mtl
etc/demo/resource/Modular Collection/Modular Terrain Hilly/: Path_Center.mtl  Path_Corner_Outer_2x2.mtl  Path_Hill_Sharp_Center.mtl  Path_Hill_Sharp_Side.mtl  Prop_Branch_1.mtl  Prop_Bush_3.mtl  Prop_Cattail_1.mtl  Prop_Fence_Boards_4.mtl  Prop_Fence_Post_2.mtl  Prop_Flower_Daisy.mtl  Prop_Flower_Lily_Blue.mtl  Prop_Flower_Lily_Pink.mtl  Prop_Flower_Rose.mtl  Prop_Flower_Sunflower.mtl  Prop_Flower_Tulip.mtl  Prop_Grass_Clump_2.mtl  Prop_Mushroom_1.mtl  Prop_Mushroom_2.mtl  Prop_Tree_Cedar_2.mtl  Prop_Tree_Oak_2.mtl  Prop_Tree_Pine_2.mtl
etc/demo/resource/enemy/: enemy1.aseprite  enemy1.json
etc/demo/resource/items/: Testa.aseprite  Testa.json
etc/demo/resource/player/: button.aseprite  button.json  player-idle-front.json  player-run-front-left.json  player-run-front-right.json  player-run-front.json  player-run-left-front.json  player.json
etc/demo/resource/player/idle/: player-idle.json
etc/demo/resource/player/skill/: fireball.aseprite  fireball.json
etc/demo/resource/tasta/: tasta.ase  tasta.json
etc/demo/resource/tasta/item/: Sprite-0001.aseprite  Sprite-0001s.aseprite  Sprite-0002.aseprite  Sprite-0003.aseprite  button.aseprite  energy.aseprite
(+233 files in other folders)
